feat: show all o

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
   <h2>A Design system powered with <b>dashed</b> Web components</h2>
   <div class="action-buttons">
     <dashed-button
-      routerLink="getting-started"
+      routerLink="get-started"
       border-radius="6"
       dash-color="primary"
       >Get started
@@ -13,27 +13,27 @@
       (click)="onClick($event)"
       border-radius="6"
       dash-color="danger"
-      >Source</dashed-button
-    >
+      >Source
+    </dashed-button>
 
-    <!-- <button>Source</button> -->
+    <dashed-toggle></dashed-toggle>
 
-    <!--
-      <dashed-button>Get started</dashed-button>
-      <dashed-card></dashed-card>
-      <dashed-checkbox>Checkbox</dashed-checkbox>
-      <dashed-fab> <dashed-icon name="close"></dashed-icon> </dashed-fab>
-      <dashed-footer></dashed-footer>
-      <dashed-header></dashed-header>
-      <dashed-input></dashed-input>
-      <dashed-link>Link</dashed-link>
-      <dashed-notification></dashed-notification>
-      <dashed-radio>Radio</dashed-radio>
-      <dashed-select></dashed-select>
-      <dashed-slider></dashed-slider>
-      <dashed-tag>Tag text</dashed-tag>
-      <dashed-toggle>Toggle</dashed-toggle>
-    -->
+    <dashed-icon name="close"></dashed-icon>
+
+    <dashed-button>Get started</dashed-button>
+    <dashed-card></dashed-card>
+    <dashed-checkbox>Checkbox</dashed-checkbox>
+    <dashed-fab> <dashed-icon name="close"></dashed-icon> </dashed-fab>
+    <dashed-footer></dashed-footer>
+    <dashed-header></dashed-header>
+    <dashed-input></dashed-input>
+    <dashed-link>Link</dashed-link>
+    <dashed-notification></dashed-notification>
+    <dashed-radio>Radio</dashed-radio>
+    <dashed-select></dashed-select>
+    <dashed-slider></dashed-slider>
+    <dashed-tag>Tag text</dashed-tag>
+    <dashed-toggle>Toggle</dashed-toggle>
   </div>
 </div>
 <footer>
