--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <dashed-header
   [navItems]="navItems"
-  logo-src="/assets/img/logo.png"
+  logosrc="/assets/img/logo.png"
   logo-text="Dashedjs"
 >
   <!--
