--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -29,6 +29,7 @@ div.container {
     display: flex;
     flex-direction: column;
     width: 200px;
+    max-width: 100%;
     dashed-button {
       --padding: 8px 16px;
       margin: 8px;
